# mpesa-credit-proof

./: .gitignore  Cargo.toml  Dockerfile  README.md  SETUP_SUPABASE.md  docker-compose.yml  enable_proofs_delete.sql  fix_transaction_types.sql  start-api.sh
.github/workflows/: ci.yml
api/: Cargo.toml
api/migrations/: 001_initial_schema.sql
api/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  utils.rs  worker.rs
api/src/handlers/: auth.rs  data.rs  lender.rs  mod.rs  proofs.rs  tills.rs  verification.rs
api/src/middleware/: auth.rs  mod.rs
api/src/services/: auth.rs  daraja.rs  mod.rs  proof.rs  storage.rs
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  sample_mpesa_transactions.csv  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  RiscZeroExecution.tsx  StatusBadge.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  database.types.ts  proofGenerator.ts  supabase.ts
frontend/src/pages/: Dashboard.tsx  GenerateProof.tsx  Landing.tsx  Onboarding.tsx  ProofShare.tsx  SignIn.tsx  Upload.tsx  Verify.tsx
frontend/supabase/migrations/: 20251109070200_create_mpesa_credit_proof_schema.sql  20251113000000_add_proofs_delete_policy.sql  20251113000001_add_delete_all_proofs_function.sql
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
