[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "json"] }
axum-core = "0.4"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
multipart = "0.18"
base64 = { version = "0.21", features = ["alloc"] }
hex = "0.4"
pdf-extract = "0.7"
csv = "1.3"
async-trait = "0.1"
bb8 = "0.8"
bb8-redis = "0.18"
rand = "0.8"

# RISC Zero integration
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.3" }
bincode = "1.3"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate"] }

